--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -2,6 +2,11 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+@font-face {
+    font-family: 'Strong Girl';
+    src: url(../fonts/strong\ girl.otf) format('truetype');
+}
+
 :root {
         /* Cores */
 
@@ -15,7 +20,7 @@
         /* Fontes */
 
     --fontepadrao: Helvetica, Arial, sans-serif;
-    --fontetitulo: 'Raleway', sans-serif;
+    --fontetitulo: 'Strong Girl','Raleway';
     --fontesubtitulo: 'Roboto', sans-serif;
 }
 
@@ -31,6 +36,10 @@ html, body {
 body {
     font-family: var(--fontepadrao);
     font-size: 100%;
+    color: var(--cor5);
+    font-weight: bold;
+    background-color: #f8eef4;
+    color: #50555e;
 }
 
 .content {
@@ -38,15 +47,15 @@ body {
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    height: 93vh;
+    margin-bottom: 5vh;
 }
 
 .section {
     display: flex;
     flex-direction: column;
     gap: 60px;
-    max-width: 800px;
-    padding: 0px;
+    width: 50vw;
+    padding: 30px;
 }
 
 .content-div {
@@ -54,29 +63,120 @@ body {
     flex-direction: row;
     align-items: center;
     padding: 0px 30px;
+    font-family: var(--fontesubtitulo);
+    letter-spacing: 0.1em;
+}
+.content-text-section1 {
+    padding: 15px;
+    font-weight: 500;
 }
 
 .content-div img{
+    object-fit: cover;
     height: 200px;
+    width: 200px;
     padding: 15px;
+    border-radius: 50%;
+    border: 2px solid var(--cor4);
+}
+
+.content-div aside {
+    padding: 15px
+}
+
+.content-div aside p {
+    color: var(--cor5);
+    font-weight: lighter;
+    font-size: 12px;
+}
+
+.content-div aside p a {
+    text-decoration: underline;
+    color: var(--cor5);
+    font-weight: bold;
+    transition: 0.5s;
+}
+
+.content-div aside p a:hover {
+    font-weight: bold;
+    color: #7b808a;
 }
 
 .title {
+    font-size: 32px;
     text-align: center;
+    font-family: var(--fontetitulo);
+    font-weight: bolder;
+    letter-spacing: 0.2em;
+    color: #50555e;
 }
 
 .article {
-    background-color: var(--cor2);
+    background-color: var(--cor1    );
     text-align: justify;
     padding: 60px;
     border-radius: 100px 0px 0px 0px;
+    font-family: var(--fontesubtitulo);
+    font-weight: 500;
+    color: #50555e;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.342);
+    border: #00000021 1px solid;
+}
+
+.section-final {
+    display: flex;
+    flex-direction: column;
+}
+
+
+.conteudo-paralelo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: justify;
+    padding: 40px;
+    gap: 30px;
+    font-family: var(--fontesubtitulo);
+    letter-spacing: 0.1em;
+    font-weight: 500;
+}
+
+.conteudo-paralelo-titulo {
+    font-family: 'Raleway';
+    font-size: 38px;
+    padding: 70px; 
+    border-top: 1px solid #af929a;
+}
+
+.conteudo-paralelo aside p {
+    color: var(--cor5);
+    font-weight: 400;
+    font-size: 12px;
+}
+
+.conteudo-paralelo aside p a {
+    font-weight: bold;
+    color: var(--cor5);
+    transition: 0.5s;
+}
+
+.conteudo-paralelo aside p a:hover {
+    font-weight: bold;
+    color: #7b808a;
+}
+
+.aside-image {
+    height: 500px;
+    width: 100%;
+    object-fit: cover;
 }
 
 .footer {
-    position: fixed;
-    bottom: 0;
-    text-align: center;
-    width: 100vw;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
     background-color: #40464A;
 }
 
