--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -38,7 +38,7 @@ body {
     font-size: 100%;
     color: var(--cor5);
     font-weight: bold;
-    background-color: #f8e9f3;
+    background-color: #f5f5f7;
     color: #50555e;
 }
 
@@ -48,10 +48,10 @@ body {
     align-items: center;
     justify-content: space-around;
     margin-bottom: 5vh;
-    background-color: #f5f5f7;
-    margin: 20px;
+    margin: 10px;
     padding: 10px;
     border-radius: 30px;
+    
 }
 
 .section {
@@ -60,6 +60,8 @@ body {
     gap: 60px;
     width: 50vw;
     padding: 30px;
+    margin: 50px;
+    border-radius: 30px;
 }
 
 .content-div {
@@ -108,11 +110,11 @@ body {
 }
 
 .title {
-    font-size: 32px;
+    font-size: 40px;
     text-align: center;
     font-family: var(--fontetitulo);
     font-weight: bolder;
-    letter-spacing: 0.2em;
+    letter-spacing: 0.3em;
     color: #50555e;
 }
 
@@ -123,8 +125,9 @@ body {
     border-radius: 100px 0px 0px 0px;
     font-family: var(--fontesubtitulo);
     font-weight: 500;
-    color: #50555e;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.342);
+    color: #f5f5f7;
+    text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.349);
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.37);
     border: #00000021 1px solid;
 }
 
@@ -149,7 +152,7 @@ body {
 
 .conteudo-paralelo-titulo {
     font-family: 'Raleway';
-    font-size: 38px;
+    font-size: 32px;
     padding: 70px; 
     border-top: 1px solid #af929a;
 }
