--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -75,6 +75,7 @@ body {
 .content-text-section1 {
     padding: 10px;
     font-weight: 500;
+    text-align: justify;
 }
 
 .content-div img{
@@ -222,6 +223,10 @@ body {
         font-size: 150%;
         margin: 0;
         padding: 0;
+    }
+
+    .section {
+        width: auto;
     }
 
     .content {
